# breakout

./: README.md  SConstruct  breakout
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lot/kes/breakout/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/pics/: bricks.tga  chars.tga  kakutis.tga  list.txt  title.tga
app/src/main/assets/sfx/: list.txt
app/src/main/cpp/: .Ball.cpp.swp  .CppSingleton.cpp.swp  .CppSingleton.h.swp  .breakout.cpp.swp  .mainer.cpp.swp  BBullets.cpp  BBullets.h  Ball.cpp  Ball.h  BreakOutMap.cpp  BreakOutMap.h  CppSingleton.cpp  CppSingleton.h  EditBox.cpp  HighScore.cpp  HighScore.h  Padd.h  Padle.cpp  Padle.h  Particles2D.cpp  Picture3D.cpp  SysConfig.cpp  SysConfig.h  TextureLoader.cpp  TextureLoader.h  Usefull.cpp  Usefull.h  Utils.cpp  Utils.h  WriteText.cpp  WriteText.h  breakout.cpp  main.cpp  mainer.cpp  map.h
app/src/main/cpp/audio/: AndroidSoundSystem.cpp  AndroidSoundSystem.h
app/src/test/java/com/lot/kes/breakout/: ExampleUnitTest.java
pics/: ball.tga  padd.tga  prize.tga  title.tga
src/: Ball.h  CppSingleton.cpp  CppSingleton.h  HighScore.cpp  HighScore.h  Input.cpp  Padd.cpp  Picture3D.h  Usefull.h  input.h  map.cpp
